# claude-code-template

./: .env.example  .env.sample  .gitignore  CLAUDE.md  LICENSE  Makefile  PARADIGM-AGENT-ARCHITECTURE.md  PYTHON_MIGRATION.md  README.md  RECOMMENDATIONS-UPDATED.md  RECOMMENDATIONS.md  artifacts-list.md  atomic-dev-flow.md  docker-compose.yml  gemini-dev-flow.md  requirements.txt
.claude/: .gitignore  config.json  settings.json
.claude/agents/: README.md  anti-pattern-detector.md  atomic-test-builder.md  codebase-architect.md  codebase-cartographer.md  coder-assembly.md  coder-data.md  coder-functional.md  coder-jvm.md  coder-mobile.md  coder-scripting.md  coder-systems.md  coder-web.md  coder.md.deprecated  design-pattern-specialist.md  doc-scribe.md  generic-code-architect.md  implementation-summarizer-b0.md  integration-guardian.md  interface-designer.md  interface-verifier.md  level-agnostic-test-prototyper.md  pattern-advisor.md  (+19 more)
.github/: PULL_REQUEST_TEMPLATE.md
ai-docs/: hooks.md
docs/: claude-code-multi-language-support-matrix.md  example-complete-execution-flow.md  final-project-structure-with-native-subagents.md  helpers.md  implementation-guide.md  languages.md  multi-language-claude-code-agents-summary.md  multi-language-phase-execution-example.md
examples/cpp-java-python-engine/engine/: CMakeLists.txt
examples/cpp-java-python-engine/engine/include/: math_engine.h
examples/cpp-java-python-engine/engine/src/: engine.cpp  matrix.cpp
examples/rust-go-microservices/payment-service/: Cargo.toml
examples/rust-go-microservices/payment-service/src/: main.rs
scripts/: generate-level-agents.py  run-examples.sh  setup.sh  validate.sh
specs/: ROADMAP-example.md  ROADMAP.md
user-claude-template/: README.md
(+106 files in other folders)
