[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
rust_decimal = { version = "1.33", features = ["serde-float"] }
rust_decimal_macros = "1.33"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
test-context = "0.1"